<resources>
    <string name="app_name">Matatufy</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="name">Name</string>
    <string name="carModel">Model</string>
    <string name="where_to">Where to?</string>
    <string name="click_to_select_time">Click to select time</string>
    <string name="fareAmount">Amount</string>
    <string name="no_needed">No. needed</string>
    <string name="click_to_select_date">Click to select Date</string>
    <string name="e_g_0712345678">e.g. 0712345678</string>
    <string name="departure_location">Departure location</string>
    <string name="tap_to_set_filters">Tap to set filters</string>
    <string name="admob_id">ca-app-pub-5255941258844848~4812516122</string>
    <string name="tap_filters">Tap to change filters</string>
    <string name="approved">Approved</string>
    <string name="declined">Declined</string>
    <string name="pending">Pending</string>
    <string name="request_approved">Request approved successfully.</string>
    <string name="request_not_approved">Not approved. Try again later.</string>
    <string name="verified">Verified</string>
    <string name="change_prof_pic">Change Profile picture</string>
    <string name="booked">Booked</string>
    <string name="not_yet_approved">Not yet Approved</string>
    <string name="mandatory">* fields are mandatory</string>
</resources>
