<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRideShare">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Name :"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_add_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ems="8"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#F8F5F5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.27"
            app:layout_constraintStart_toEndOf="@+id/textView22"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Car Model :"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <EditText
            android:id="@+id/editText_add_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:ems="8"
            android:hint="@string/carModel"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#E8E6E6"
            app:layout_constraintEnd_toEndOf="@+id/editText_add_name"
            app:layout_constraintStart_toStartOf="@+id/editText_add_name"
            app:layout_constraintTop_toBottomOf="@+id/editText_add_name" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Phone no :"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <EditText
            android:id="@+id/editText_add_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="8"
            android:hint="@string/e_g_0712345678"
            android:inputType="number|phone"
            android:textColor="#F1F1F1"
            app:layout_constraintEnd_toEndOf="@+id/editText_add_model"
            app:layout_constraintStart_toStartOf="@+id/editText_add_model"
            app:layout_constraintTop_toBottomOf="@+id/editText_add_model" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Date :"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/editText_add_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:focusable="false"
            android:text="@string/click_to_select_date"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/editText_add_phone"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_add_phone"
            app:layout_constraintTop_toBottomOf="@+id/editText_add_phone" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="From :"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <EditText
            android:id="@+id/editText_add_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="8"
            android:hint="@string/departure_location"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/editText_add_date"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_add_date"
            app:layout_constraintTop_toBottomOf="@+id/editText_add_date" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Destination :"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <EditText
            android:id="@+id/editText_add_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="8"
            android:hint="@string/where_to"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#FFF9F9"
            app:layout_constraintEnd_toEndOf="@+id/editText_add_from"
            app:layout_constraintStart_toStartOf="@+id/editText_add_from"
            app:layout_constraintTop_toBottomOf="@+id/editText_add_from" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Time :"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView22"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <TextView
            android:id="@+id/editText_add_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="8"
            android:text="@string/click_to_select_time"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/editText_add_to"
            app:layout_constraintStart_toStartOf="@+id/editText_add_to"
            app:layout_constraintTop_toBottomOf="@+id/editText_add_to" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Fare in Ksh :"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView23"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <EditText
            android:id="@+id/editText_add_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="@string/fareAmount"
            android:inputType="numberDecimal"
            android:textColor="#F3E7E7"
            app:layout_constraintBottom_toBottomOf="@+id/textView20"
            app:layout_constraintEnd_toEndOf="@+id/editText_add_time"
            app:layout_constraintStart_toStartOf="@+id/editText_add_time"
            app:layout_constraintTop_toTopOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Required passengers:"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView20"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <EditText
            android:id="@+id/editText_rideSharees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/no_needed"
            android:inputType="number"
            android:textColor="#ECDEDE"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="@+id/editText_add_cash"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/textView10" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>